--- a/style.css
+++ b/style.css
@@ -6,3 +6,17 @@ header {
   margin: 0 auto;
   text-align: center;
 }
+
+header .headline{
+  font-size: 32px;
+}
+.nav-list {
+  text-align: center;
+  padding: 10px 0;
+  margin: 0 auto;
+}
+.nav-list-item {
+  list-style: none;
+  display: inline-block;
+  margin: 0 20px;
+}
