--- a/style.css
+++ b/style.css
@@ -1,37 +1,53 @@
 @charset "UTF-8"
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  width: 100%;
+  margin: 0;
+}
+
 header {
   width: 100%;
-  padding: 15px 0;
-  margin: 0 auto;
   text-align: center;
   color: lightcyan;
-  background-color: black;
+  background: black;
 }
 header .headline{
+  margin: 0;
+  padding-top: 12px;
+  padding-bottom: 5px;
   font-size: 32px;
+  color: lightcyan;
   text-align: center;
-  background-color: black;
 }
 .nav-list {
   text-align: center;
-  padding: 10px 0;
   margin: 0 auto;
   background-color: black;
-  border-bottom: 4px solid midnightblue;
+  border-bottom: 4px solid steelblue;
+  font-size:0;  /*リスト間の空白をなくすために指定*/
 }
 .nav-list-item {
   list-style: none;
   display: inline-block;
-  margin: 0 20px;
+  border: solid black;
+  border-width: 5px 20px;
   color: white;
   background-color: black;
   text-decoration: none;
+  font-size:16px;  /*リスト間の空白をなくすために指定*/
 }
-.nav-list-item a:link { color:white;list-style: none; }
-.nav-list-item a:visited { color:white;list-style: none; }
-.nav-list-item a:hover { color:lightcyan;list-style: none; }
-.nav-list-item a:active { color:cyan;list-style: none; }
-.nav-list-item:hover2 {
-  background-color: midnightblue;
+.nav-list-item a:link { color:white;text-decoration:none; }
+.nav-list-item a:visited { color:white;text-decoration:none; }
+.nav-list-item a:hover { color:lightcyan;text-decoration:none; }
+.nav-list-item a:active { color:cyan;text-decoration:none; }
+.nav-list-item:hover {
+  background-color: steelblue;
+  border: solid steelblue;
+  border-width: 5px 20px;
+  transition: 0.3s ;
 }
