--- a/style.css
+++ b/style.css
@@ -64,15 +64,15 @@ main {
 
 /*見出し*/
 h2 {
-    margin: 20px 0 0;
-    padding: 0 0 4px;
-    font-size: 30px;
-    border-bottom: 4px solid lightcyan;
-    line-height: 1.4;
+  margin: 20px 0 0;
+  padding: 0 0 4px;
+  font-size: 24px;
+  border-left: 6px solid lightcyan;
+  line-height: 1.2;
 }
 h3 {
-    margin: 15px 0 0;
-    padding: 0 0 6px;
-    border-bottom: solid 1px lightcyan;
-    font-size: 26px;
+  margin: 15px 0 0;
+  padding: 0 0 6px;
+  border-bottom: solid 1px lightcyan;
+  font-size: 20px;
 }
