--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ header .headline{
 main {
   margin: 0 8%;
   padding: 0 16px;
-  height: 100%;
+  height: 100vh;
   background:rgba(0,0,0,0.6)
 }
 
