--- a/style.css
+++ b/style.css
@@ -16,14 +16,15 @@ body {
 /*リンク*/
 a:link { color:cyan;text-decoration:none; }
 a:visited { color:turquoise;text-decoration:none; }
-a:hover { color:paleturquoise;text-decoration:none; }
-a:active { color:white;text-decoration:none; }
+a:hover { color:paleturquoise; }
+a:active { color:white; }
 
 header {
   width: 100%;
   text-align: center;
   color: lightcyan;
   background: black;
+  position: fixed;
   overflow: hidden;
 }
 header .headline{
