--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header {
   text-align: center;
   color: lightcyan;
   background: black;
-  position: fixed;
+  position: sticky;
   overflow: hidden;
 }
 header .headline{
