--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ a:hover { color:paleturquoise; }
 a:active { color:white; }
 
 header {
+  margin: 0;
+  padding: 0;
   width: 100%;
   text-align: center;
   color: lightcyan;
