--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ header .headline{
 
 main {
   margin: 0 8%;
-  padding: 0 16px;
+  padding: 20px 16px;
   height: 100vh;
   background:rgba(0,0,0,0.7)
 }
