--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ header .headline{
 }
 
 main {
-  width: 80%
+  width: 80%;
   max-width: 1000px;
   margin-left: auto; /*中央揃えのため*/
   margin-right: auto; /*中央揃えのため*/
