--- a/style.css
+++ b/style.css
@@ -80,15 +80,19 @@ footer {
   bottom:0;
 }
 footer .copyright{
+  width: 92%;
+  margin-left: auto; /*中央揃えのため*/
+  margin-right: auto; /*中央揃えのため*/
   margin: 0;
-  padding-top: 1px;
-  padding-bottom: 1px;
-  font-size: 8px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  font-size: 10px;
   color: lightcyan;
   text-align: left;
 }
 
 /*各種要素*/
+/*本文*/
 main {
   width: 80%;
   max-width: 1000px;
