--- a/style.css
+++ b/style.css
@@ -145,10 +145,9 @@ figure {
   margin: auto;
   padding: 5px;
   max-width: 250px;
-  background-color: #325d80;
   display: flex;
   flex-flow: column;
-  border: thin #1e384d solid;
+  border: medium #1e384d solid;
 }
 figure img {
   max-width: 250px;
@@ -158,6 +157,14 @@ figure figcaption {
   background-color: #122533;
   color: #fff;
   padding: 3px;
-  font-size: 9px;
+  font-size: 11px;
   text-align: center;
+}
+figure.figure_left{
+  float: left;
+  margin-right: 1.5em;
+}
+figure.figure_right{
+  float: right;
+  margin-left: 1.5em;
 }
