--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ main {
   max-width: 1000px;
   margin-left: auto; /*中央揃えのため*/
   margin-right: auto; /*中央揃えのため*/
-  padding: 103px 16px 0;
+  padding: 103px 16px 16px;
   min-height: 100vh;
   min-height: 100svh;
   background:rgba(0,0,0,0.6)
