--- a/style.css
+++ b/style.css
@@ -164,6 +164,10 @@ figure.figure_left{
   float: left;
   margin-right: 1.5em;
 }
+figure.figure_right{
+  float: right;
+  margin-left: 1.5em;
+}
 figure.figure_center{
   max-width: 750px;
 }
